# Crosswind-Console

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  MCP_DOCKER_GUIDE.md  README.md  allendpointparamsformcp.md  developers.amadeus.com_self-service_apis-docs_guides_developer-guides_quick-start_#creating-the-request.2026-01-07T22_24_37.330Z.md  docker-compose.yml  kiwi_api_docs.md  mcpserverstoconfig.md  rapidapi.com_DataCrawler_api_google-flights2.2026-01-07T18_46_55.860Z.md  rapidapi.com_tipsters_api_booking-com.2026-01-01T23_50_51.310Z.md  rapidapi.com_tipsters_api_booking-com_playground_apiendpoint_d299398a-affe-4850-95bf-6cea3d4ca462.md  remove_bg.py  temporaryfirecrawlforagent.json
backend/: .env.example  backend_logs.txt  crosswind.db  endpoint_urls.txt  filtered_errors.txt  filtered_log.txt  kiwi_response.json  last_log.txt  pyproject.toml  rag_check.txt  recent_log.txt  sky_test.txt  tool_calls.txt  tool_trace.txt
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  seed_data.py
backend/intelligent_hub_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: 001_trip_sessions.sql
backend/scripts/: check_rag_db.py  fetch_all_mcp_tools.py  fetch_mcp_tools.py  fetch_mcp_via_subprocess.py  fetch_rapidapi_direct.py  ingest_api_docs.py  ingest_rag_docs.py  ingest_rag_standalone.py  inspect_booking_api.py  setup_rag.sql  test_amadeus.py  test_amadeus_hotels.py  test_google_flights2.py  test_google_maps_mcp.py  test_langchain_sandbox.py  test_mcp_client.py  test_mcp_proper.py  test_rag_search.py  (+11 more)
(+110 files in other folders)
