[project]
name = "intelligent-hub-backend"
version = "0.1.0"
description = "FastAPI backend for the cross-domain intelligent discovery platform"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
dependencies = [
  "fastapi>=0.109,<1",
  "uvicorn[standard]>=0.22,<1",
  "httpx>=0.25,<0.28",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.0,<3",
  "google-generativeai>=0.6,<0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
